# dyna_dialogs

./: .gitignore  CONTRIBUTING.md  INSTALLATION.md  PACKAGING_NOTES.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  main.py  pyproject.toml
core/: __init__.py  dialog.py  fields.py  parser.py
docs/: example_template.txt  notes.md
examples/: main.py
utils/: __init__.py
