[project]
name = "dyna-dialogs"
version = "0.1.0"
description = "Create tkinter dialogs from simple pipe-delimited text templates"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Brad Fike", email = "bradfike@gmail.com" }
]
keywords = ["tkinter", "dialog", "gui", "ui", "forms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

# No dependencies required - uses Python standard library only
dependencies = []

[project.optional-dependencies]
# Optional logger utilities
logger = []

[project.urls]
Homepage = "https://github.com/fikebr/dyna-dialogs"
Repository = "https://github.com/fikebr/dyna-dialogs"
Issues = "https://github.com/fikebr/dyna-dialogs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "utils"]
